fbdevhw: kernel >=v6.9 breaks fbdev_open()
First found in Debian's automated ISO QA Testing infrastructure [0] and confirmed due to recent Linux kernel changes [1] in the sysfs path of the parent device.
The framebuffer device's symlink now points to the parent PCI device which breaks detection. I'm sending a patch to xorg-devel@ which changes this to use the subsystem node instead.
Kernel v6.8:
[ 14.067] (II) fbdev_open() sysfs_path=/sys/class/graphics/fb0
[ 14.067] (II) fbdev_open() buf=../../devices/platform/vesa-framebuffer.0/graphics/fb0
Kernel v6.9
[ 15.609] (II) fbdev_open() sysfs_path=/sys/class/graphics/fb0
[ 15.609] (II) fbdev_open() buf=../../devices/pci0000:00/0000:00:01.0/vesa-framebuffer.0/graphics/fb0
[0] https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1075713
Patch sent to xorg-devel@
Edited by Tj